fix spacing in prescription text

--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,10 @@ form h2{
     margin: .1in 0 0 0;
 }
 
+#calendar #prescription ul li:not(:last-child){
+    margin-bottom: .1in;
+}
+
 /************************************************************  
                          FOOTER 
 ************************************************************/
